After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 797058 - rtmpsink: Fix leak on connection failure
rtmpsink: Fix leak on connection failure
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
git master
Other Linux
: Normal normal
: 1.15.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2018-08-31 06:06 UTC by Seungha Yang
Modified: 2018-08-31 07:04 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
rtmpsink: Fix leak on connection failure (2.03 KB, patch)
2018-08-31 06:07 UTC, Seungha Yang
committed Details | Review

Description Seungha Yang 2018-08-31 06:06:32 UTC
Although RTMP_ConnectStream() was failed, librtmp's internal memory
is not freed by RTMP_ConnectStream(), so RTMP_Close() should be called
before RTMP_Free()
Comment 1 Seungha Yang 2018-08-31 06:07:13 UTC
Created attachment 373511 [details] [review]
rtmpsink: Fix leak on connection failure
Comment 2 Sebastian Dröge (slomo) 2018-08-31 07:04:27 UTC
Attachment 373511 [details] pushed as 3bd3cc7 - rtmpsink: Fix leak on connection failure