rtmpsink: Fix leak on connection failure

Although RTMP_ConnectStream() was failed, librtmp's internal memory
is not freed by RTMP_ConnectStream(), so RTMP_Close() should be called
before RTMP_Free()

https://bugzilla.gnome.org/show_bug.cgi?id=797058